[gd_scene load_steps=3 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://ItemButton.tscn" type="PackedScene" id=2]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )
ITEM_BUTTON = ExtResource( 2 )

[node name="ProteinScore" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "Protein Points: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryLabel" type="Label" parent="."]
margin_top = 36.0
margin_right = 106.0
margin_bottom = 360.0
text = "Inventory:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop" type="ColorRect" parent="."]
margin_left = 440.0
margin_top = 106.699
margin_right = 582.0
margin_bottom = 254.699
color = Color( 0.14902, 0.172549, 0.231373, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ShopLabel" type="Label" parent="Shop"]
margin_right = 142.0
margin_bottom = 28.0
text = "Shop"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="Shop"]
margin_left = 130.552
margin_top = -8.56935
margin_right = 150.552
margin_bottom = 11.4307
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Shop"]
margin_left = 12.0
margin_top = 28.0
margin_right = 132.0
margin_bottom = 138.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Shop/ScrollContainer"]
margin_right = 120.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="."]
margin_top = 16.7739
margin_right = 106.0
margin_bottom = 30.7739
text = "Status"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TooltipLabel" type="Label" parent="."]
margin_right = 44.0
margin_bottom = 14.0
text = "Tooltip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoundLabel" type="Label" parent="."]
margin_left = 519.548
margin_right = 599.548
margin_bottom = 14.0
text = "Round: 0000"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverBox" type="ColorRect" parent="."]
margin_left = 248.12
margin_top = 134.699
margin_right = 368.12
margin_bottom = 214.699
color = Color( 0.14902, 0.172549, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="GameOverBox"]
margin_left = 21.8929
margin_top = 17.6938
margin_right = 95.8929
margin_bottom = 31.6938
text = "Game over!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GameOverBox"]
margin_left = 31.8442
margin_top = 45.7761
margin_right = 88.8442
margin_bottom = 65.7761
text = "Restart"
[connection signal="pressed" from="Shop/CloseButton" to="." method="_on_CloseButton_pressed"]
